# kernel

./: .gitignore  111.txt  AGENTS.md  CLAUDE.md  CONSTITUTION.md  CONTEXT.md  DESIGN.md  LEGO_ARCHITECTURE.md  Makefile  PHILOSOPHY_AND_CRACKS.md  README.md  TEXTUAL_MIGRATION.md  _background.py  _call.py  _compact.py  _demo_textual.py  _display.py  _run.py  _runtime.py  _test_textual.py  agent.py  background.py  background_contract.py  baseline_before_refactor.json  call.py  call_contract.py  chat.py  commands.py  commit_msg.txt  compact.py  compact_prompt.md  display.py  extract.py  frontend.html  history.py  hotpatch-streaming-example.md  inject.py  llm.py  load.py  main.py  (+22 more)
autogpt_index/: imports.json  modules.json  overview.md
frontend/: AGENTS.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  theme.css  (+1 more)
plans/: A-textual.md  B-websocket.md  C-ipc.md  D-frontend-react.md  README.md  _TEMPLATE.md  architecture-deepening.md
prompts/: arch.txt  craft.txt  design.txt  plan.txt  think_深度思考.txt
tests/: test_agent.py  test_bash.py  test_bg_start.py  test_compact.py  test_display.py  test_edit.py  test_glob.py  test_grep.py  test_history.py  test_inject.py  test_kernel.py  test_observer.py  test_plan.py  test_protocol_observer.py  test_read.py  test_runtime.py  test_survey.py  test_system.py  test_terminal_renderer.py  test_websocket_observer.py  test_write.py
tools/: agent.py  bash.py  bg_start.py  edit.py  exclude.py  glob.py  grep.py  mcp.py  plan.py  read.py  survey.py  task_cancel.py  task_status.py  write.py
(+54 files in other folders)
