[project]
name = "kernel"
version = "0.1.0"
description = "持久 IPython 内核上的极简自驱动 agent——模型写代码块、执行、看三元组反馈、迭代"
requires-python = ">=3.8"
dependencies = [
    "ipython",        # 持久执行内核（runtime.py / inject.py）
    "rich",           # 终端 Markdown 渲染（display.py）
    "pyyaml",         # 解析 SKILL.md 的 YAML frontmatter（system.py）
    "websockets",     # WebSocket 服务端（web/websocket_server.py）
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kernel = ["*.md", "*.json", "*.html"]

[project.scripts]
ma = "kernel.main:main"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = ["UP"]
